Rewrited certificate & card

--- a/src/test/resources/dev.properties
+++ b/src/test/resources/dev.properties
@@ -3,3 +3,13 @@ test.data.first.email = recipient@mail.com
 test.data.first.sender = sender
 test.data.first.price = 10
 
+test.data.card = 1111111111111111
+test.data.month = 10
+test.data.year = 2019
+test.data.CSC = 111
+
+test.data.zip = 90041
+test.data.promocode = 123123 
+test.data.count = 100
+test.data.coupon.error = The coupon code you entered could not be found. 
+
