Certificate test almost work

--- a/src/test/resources/dev.properties
+++ b/src/test/resources/dev.properties
@@ -8,8 +8,11 @@ test.data.month = 10
 test.data.year = 2020
 test.data.CSC = 111
 
+test.data.card.number.error = The number you entered is invalid or not supported by this store. Enter a new credit or debit card number, or double-check your entry above.
+test.data.card.csc.error = Please enter your card security code, which is the 3 digit code on the back of your card (for Visa, Mastercard, and Discover), or the 4 digit code on the front (for American Express).
+
 test.data.zip = 90041
-test.data.promocode = 123123 
+test.data.promocode = 123123
 test.data.count = 100
 test.data.coupon.error = The coupon code you entered could not be found.
 
