--- a/src/test/resources/dev.properties
+++ b/src/test/resources/dev.properties
@@ -8,6 +8,9 @@ test.data.month = 10
 test.data.year = 2020
 test.data.CSC = 111
 
+test.data.cart.amount = 2
+test.data.cart.minprice = 50.0
+
 test.data.card.number.error = The number you entered is invalid or not supported by this store. Enter a new credit or debit card number, or double-check your entry above.
 test.data.card.csc.error = Please enter your card security code, which is the 3 digit code on the back of your card (for Visa, Mastercard, and Discover), or the 4 digit code on the front (for American Express).
 
